bugfix: prevent overflow on shopping cart

--- a/ressources/css/root.css
+++ b/ressources/css/root.css
@@ -9,6 +9,18 @@ body {
     width: 100dvw;
 }
 
+.w-100 {
+    max-width: 100%;
+}
+
+.w-80 {
+    max-width: 80%;
+}
+
+.w-60 {
+    max-width: 60%;
+}
+
 .sidebar-nav {
     width: var(--offcanvas-width);
     background-color: #242B3D;
